# qalam

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
qalam-cli/: Cargo.toml
qalam-cli/src/: main.rs
qalam-core/: Cargo.toml
qalam-core/src/: conf.rs  error.rs  lib.rs  morph_ir.rs  provenance.rs  trace.rs
qalam-lexicon-builder/: Cargo.toml
qalam-lexicon-builder/src/: main.rs
qalam-morph/: Cargo.toml
qalam-morph/data/: lexicon.toml
qalam-morph/src/: analyzer.rs  lexicon.rs  lib.rs  patterns.rs  roots.rs
qalam-text/: Cargo.toml
qalam-text/benches/: text.rs
qalam-text/data/: folds.toml
qalam-text/src/: clitics.rs  freq.rs  lib.rs  tokenize.rs  unicode.rs
qalam-text/tests/: reproducibility.rs
tests/fixtures/: golden_corpus.txt
