[package]
name = "qalam-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Qalam Arabic linguistic intelligence engine."

[[bin]]
name = "qalam"
path = "src/main.rs"

[dependencies]
qalam-core = { workspace = true }
qalam-text = { workspace = true }
qalam-morph = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
