[package]
name = "qalam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core IR types and determinism primitives for Qalam, an Arabic linguistic intelligence platform."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ordered-float = { workspace = true }
smol_str = { workspace = true }
smallvec = { workspace = true }
indexmap = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
