[package]
name = "qalam-morph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Templatic morphology engine for Arabic: pattern matching, root extraction, lexicon lookup."

[dependencies]
qalam-core = { workspace = true }
qalam-text = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
smallvec = { workspace = true }
indexmap = { workspace = true }
ordered-float = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
