[package]
name = "qalam-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unicode normalization, tokenization, and clitic splitting for Arabic text."

[dependencies]
qalam-core = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
smallvec = { workspace = true }
unicode-normalization = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "text"
harness = false
